--- a/CSS2/Grid/practice.css
+++ b/CSS2/Grid/practice.css
@@ -15,3 +15,11 @@
     text-align: center;
     border: 2px solid black;
 }
+
+#first
+{
+    grid-column: 1/ 3;
+    /* grid-column-start: 2;
+    grid-column-end: 3; */
+    grid-row: 1/ span 2
+}
